--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,94 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AlpineJS</title>
-    <script src="alpinejs-3.12.0-min.js" defer></script>
-    <style>
-      table,
-      th,
-      tr,
-      td {
-        border-collapse: collapse;
-        border: 1px solid #808080;
-      }
-      a:visited {
-        color: blue;
-      }
-    </style>
-  </head>
-  <body
-    x-data="{
-    page:1,
-    metaData: [],
-    employees:[],
-    empl:[], 
-    getEmployees(){
-        fetch('/employees')
-        .then((response) => response.json())
-        .then((json) => {
-            this.employees = json.rows;
-            console.log(this.employees);
-        });        
-    }, 
-    showDetails(empno){
-        fetch(`/empno/${empno}`)
-        .then((response) => response.json())
-        .then((json) => {
-            this.empl = json.rows[0];
-            this.metaData = json.metaData;
-            console.log(this.empl);
-            this.page = 2
-        });        
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>AlpineJS</title>
+        <script src="alpinejs-3.12.0-min.js" defer></script>
+        <!-- prettier-ignore -->
+        <style>
+            table, th, tr, td {
+                border-collapse: collapse;
+                border: 1px solid #808080;
+            }
+            a:visited {
+                color: blue;
+            }
+        </style>
+    </head>
+    <body
+        x-data="{
+            page:1, metaData: [], employees:[], depts:[], empl:[],
+             
+            getEmployees(){
+                fetch('/employees')
+                .then((response) => response.json())
+                .then((json) => {
+                    this.employees = json.rows;
+                    console.log(this.employees);
+                });        
+            }, 
+            showDetails(empno){
+                fetch(`/empno/${empno}`)
+                .then((response) => response.json())
+                .then((json) => {
+                    this.empl = json.rows[0];
+                    this.metaData = json.metaData;
+                    console.log(this.empl);
+                    this.page = 2
+                });        
 
-        console.log(empno);
-    }
-  }"
-    x-init="getEmployees()"
-  >
-    <div x-show="page === 1">
-      <h1>List</h1>
-      <table>
-        <tr>
-          <th>Emp No</th>
-          <th>Name</th>
-        </tr>
-        <template x-for="emp in employees">
-          <tr>
-            <td x-text="emp[0]"></td>
-            <td>
-              <a href="#" x-text="emp[1]" @click="showDetails(`${emp[0]}`)"></a>
-            </td>
-          </tr>
-        </template>
-      </table>
-    </div>
-    <div x-show="page === 2">
-      <h1>Details</h1>
-      <table>
-        <template x-for="(col, index) in empl">
-          <tr>
-            <th x-text="`${metaData[index].name}:`" style="text-align: left;"></th>
-            <td x-text="col"></td>
-          </tr>
-        </template>
-      </table>
-      <a href="#" @click="page=3">Edit</a>
-    </div>
-    <div x-show="page === 3">
-      <h1>Edit</h1>
-      <table>
-        <template x-for="(col, index) in empl">
-          <tr>
-            <th x-text="`${metaData[index].name}:`" style="text-align: left;"></th>
-            <td>
-                <input type="text" x-model="col">
-            </td>
-          </tr>
-        </template>
-      </table>
-    </div>
-  </body>
+                console.log(empno);
+            }, 
+            Edit(){
+                fetch('/depts').then((res) => res.json())
+                .then((json) => {
+                    this.depts = json.rows;
+                    console.log(this.depts);
+                });          
+                this.page = 3;
+            }
+        }"
+        x-init="getEmployees()">
+        <div x-show="page === 1">
+            <h1>List</h1>
+            <table>
+                <tr>
+                    <th>Emp No</th>
+                    <th>Name</th>
+                </tr>
+                <template x-for="emp in employees">
+                    <tr>
+                        <td x-text="emp[0]"></td>
+                        <td>
+                            <a href="#" x-text="emp[1]" @click="showDetails(`${emp[0]}`)"></a>
+                        </td>
+                    </tr>
+                </template>
+            </table>
+        </div>
+        <div x-show="page === 2">
+            <h1>Details</h1>
+            <table>
+                <template x-for="(col, index) in empl">
+                    <tr>
+                        <th x-text="`${metaData[index].name}:`" style="text-align: left"></th>
+                        <td x-text="col"></td>
+                    </tr>
+                </template>
+            </table>
+            <a href="#" @click="Edit()">Edit</a>
+        </div>
+        <div x-show="page === 3">
+            <h1>Edit</h1>
+            <table>
+                <template x-for="(col, index) in empl">
+                    <tr>
+                        <th x-text="`${metaData[index].name}:`" style="text-align: left"></th>
+                        <td>
+                            <template x-if="index == 3">
+                                <select x-model="col">
+                                    <option value="" selected></option>
+                                    <template x-for="emp in employees">
+                                        <option :value="emp[0]" :selected="emp[0] === col" x-text="emp[1]"></option>
+                                    </template>
+                                </select>
+                            </template>
+                            <template x-if="index == 7">
+                                <select x-model="col">
+                                    <template x-for="dept in depts">
+                                        <option :value="dept[0]" :selected="dept[0] === col" x-text="dept[1]"></option>
+                                    </template>
+                                </select>
+                            </template>
+                            <template x-if="index != 7 && index != 3">
+                                <input type="text" x-model="col" />
+                            </template>
+                        </td>
+                    </tr>
+                </template>
+            </table>
+        </div>
+    </body>
 </html>
